optimised NamedFlags